<resources>
    <string name="app_name">Bither</string>
    <string name="localization.language.code">en</string>
    <string name="bitcoin_balance_label">BTC</string>
    <string name="bitcoin_symbol">BTC</string>
    <string name="market_trading_amount">Volume</string>
    <string name="market_price_high">High</string>
    <string name="market_price_low">Low</string>
    <string name="market_price_open">Open</string>
    <string name="market_price_close">Close</string>
    <string name="market_name_huobi">HUOBI</string>
    <string name="market_name_bitstamp">Bitstamp</string>
    <string name="market_name_btce">BTC-E</string>
    <string name="market_name_okcoin">OKCoin.CN</string>
    <string name="market_name_chbtc">CHBTC</string>
    <string name="market_name_btcchina">BTCChina</string>
    <string name="market_name_796">796</string>
    <string name="market_name_bitfinex">Bitfinex</string>
    <string name="market_name_btctrade">BtcTrade</string>
    <string name="market_name_coinbase">Coinbase</string>
    <string name="activity_name_address_detail">Detail</string>
    <string name="activity_name_address_sign_tx">Sign Transaction</string>
    <string name="activity_name_qr_code">QR Code</string>
    <string name="activity_name_generate_unsigned_tx">Balance:</string>
    <string name="activity_name_add_cold_address">Generate New Private Keys</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Cancel</string>
    <string name="operate">Set</string>
    <string name="address_option_delete">Stop monitoring</string>
    <string name="address_option_remonitor">Remonitor</string>
    <string name="address_option_view_on_blockchain_info">View on Blockchain.info</string>
    <string name="address_option_view_on_btc">View on btc.com</string>
    <string name="address_option_view_on_blockchair">View on blockchair.com</string>
    <string name="address_delete_confirmation">Sure to stop monitoring this address?</string>
    <string name="address_remonitor_confirmation">Sure to remonitor this address?</string>
    <string name="address_monitor_failed">Monitor failed</string>
    <string name="address_monitor_failed_too_much_tx">Can not monitor address with too much TXs</string>
    <string name="address_monitor_failed_multiple_address">Can not monitor special MultiSig address</string>
    <string name="total_btc_prefix">Total:</string>
    <string name="total_address_prefix">Private Key Count:</string>
    <string name="total_hdm_keychain_prefix">HDM Cold:</string>
    <string name="please_wait">Please wait…</string>
    <string name="address_group_watch_only">Cold Wallet Address</string>
    <string name="address_group_private">Hot Wallet Address</string>
    <string name="network_or_connection_error">Network failure.</string>
    <string name="high_api_is_too_old">Service data is too old ,Please wait</string>
    <string name="find_browser_error">You don\'t have a browser</string>
    <string name="address_balance">Balance</string>
    <string name="address_total_incoming">Received</string>
    <string name="address_total_outgoing">Sent</string>
    <string name="address_detail_balance_detail_transaction_count">Transaction</string>
    <string name="address_total_transaction_count">tx:</string>
    <string name="address_first_seen_time">Birth Time</string>
    <string name="input_coinbase">Minning</string>
    <string name="address_cannot_be_parsed">Unknown Address</string>
    <string name="address_mine">Me</string>
    <string name="copy_address">Copy</string>
    <string name="qr_code">QR Code</string>
    <string name="copy_address_success">Address copied</string>
    <string name="copy_private_key_success">Private key copied</string>
    <string name="confirmations_postfix">Confirmations</string>
    <string name="confirmation_postfix">Confirmation</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="address_detail_send">Send</string>
    <string name="address_detail_unsigned_transaction">Unsigned TX</string>
    <string name="address_detail_send_balance_zero">You have no coins to send</string>
    <string name="address_detail_no_transactions">No transactions found for this address, it has probably not been used on the network yet.</string>
    <string name="address_detail_monitor_failed">Cannot monitor address with large amount of transactions.</string>
    <string name="address_detail_monitor_failed_tx_toomuch">Cannot monitor address with large amount of transactions.</string>
    <string name="address_detail_monitor_failed_special_address">Cannot monitor address with special transactions.</string>
    <string name="address_detail_cancel_monitor">Stop Monitoring</string>
    <string name="address_detail_transaction_confidence_dialog_prefix">Confirmation:</string>
    <string name="address_detail_stop_monitoring_progress_dialog">Stopping Monitoring…</string>
    <string name="address_detail_cannot_stop_monitoring">You can only stop monitoring one address in a minute.</string>
    <string name="address_detail_cannot_remonitor">You can only remonitor one address in a minute.</string>
    <string name="address_detail_empty_address_list_notice">You can\'t empty address list.</string>
    <string name="address_detail_private_key_qr_code">Private Key QR Code</string>
    <string name="address_detail_private_key_qr_code_encrypted">Private Key QR Code (Encrypted)</string>
    <string name="address_detail_private_key_qr_code_decrypted">Private Key QR Code (Decrypted)</string>
    <string name="address_detail_private_Key_qr_code_bip38">BIP38 Private Key QR Code</string>
    <string name="address_detail_private_key_qr_code_backup">Back Up Private Key</string>
    <string name="add_address_tab_watch_only">Monitor</string>
    <string name="add_address_tab_private_key">Private</string>
    <string name="add_address_coming_soon">Coming Soon…</string>
    <string name="add_address_scan">Scan</string>
    <string name="add_address_delete">Delete</string>
    <string name="add_address_watch_only_hint">Bitcoin Address</string>
    <string name="add_address_already_watched">This address is already monitored</string>
    <string name="addresses_already_monitored">This Bither Cold is already monitored.</string>
    <string name="add_address_generate_address_with_private_key">Generate</string>
    <string name="add_address_generate_address_password_label">Enter the private keys encrypt password</string>
    <string name="add_address_generate_address_password_lengh_note">Length: 6&#8211;43</string>
    <string name="add_address_generate_address_password_set_label">Set private keys encrypt password</string>
    <string name="add_address_generate_address_password_hint">Password</string>
    <string name="add_address_generate_address_password_confirm_hint">Confirm Password</string>
    <string name="add_address_generate_address_password_not_same">Passwords not same</string>
    <string name="password_des">This password will only be used to encrypt local private keys. Bither is a decentralized wallet, it does not require login credentials.</string>
    <string name="password_checking">Checking password</string>
    <string name="password_wrong">Wrong Password</string>
    <string name="decrypt_failed">Decryption Failed</string>
    <string name="wallet_loading">Loading wallets, Please try again later.</string>
    <string name="add_address_watch_only_scanned_address_warning">Bither can only monitor Bither Cold monitor QR code,\nnot other addresses.</string>
    <string name="send_progress_dialog_message">Sending</string>
    <string name="send_success">Send success</string>
    <string name="send_failed">Send failed</string>
    <string name="send_failed_missing_btc">Send failed. Lack of %s BTC.</string>
    <string name="send_failed_dust_out_put">Send failed. Sending coins this few will be ignored.</string>
    <string name="send_failed_pendding">Send failed. %s BTC to be confirmed.\nPlease wait for another confirmation.</string>
    <string name="send_failed_max_tx_size">Send failed. Transaction size is to large.\nPlease reduce amount.</string>
    <string name="send_coins_fragment_sending_address_label">From</string>
    <string name="send_coins_fragment_receiving_address_label">Pay to</string>
    <string name="send_coins_fragment_amount_label">Amount to pay</string>
    <string name="send_result_sent_to">will be sent to</string>
    <string name="send_result_with_fee">miner fee</string>
    <string name="send_confirm_address">You will send to:</string>
    <string name="send_confirm_amount">Amount:</string>
    <string name="send_confirm_fee">Miner Fee:</string>
    <string name="send_confirm_fee_rate">Miner Fee Rate:</string>
    <string name="send_confirm_fee_rate_symbol">sat/vB</string>
    <string name="send_confirm_low_priority_warn">You have outputs lower than 0.01BTC,\nand transaction miner fee is low.\n<b>Confirmation may be very slow</b>.</string>
    <string name="unsigned_transaction_exit_waring">Give up signing?\nThis transaction will not get broadcasted.</string>
    <string name="market_sell">Sell:</string>
    <string name="market_buy">Buy:</string>
    <string name="market_height">H:</string>
    <string name="market_low">L:</string>
    <string name="market_line_one_minute">1min</string>
    <string name="market_line_five_minute">5mins</string>
    <string name="market_line_one_hour">1hour</string>
    <string name="market_line_one_day">1day</string>
    <string name="market_detail_new_price">Price</string>
    <string name="market_detail_sell_price">Sell</string>
    <string name="market_detail_buy_price">Buy</string>
    <string name="market_detail_high_price">High</string>
    <string name="market_detail_low_price">Low</string>
    <string name="market_detail_depth">Market Depth</string>
    <string name="buy_order">Buy</string>
    <string name="sell_order">Sell</string>
    <string name="market_share_button">Share</string>
    <string name="market_web_button_prefix">Visit</string>
    <string name="market_share_failed">Share failed.</string>
    <string name="kline">K-line</string>
    <string name="ten_line">10 line: </string>
    <string name="thirty_line">30 line: </string>
    <string name="kline_high">High: </string>
    <string name="kline_low">Low: </string>
    <string name="kline_open">Open: </string>
    <string name="kline_close">Close: </string>
    <string name="set_avatar_camera">From Camera</string>
    <string name="set_avatar_gallery">From Gallery</string>
    <string name="recover_from_backup_title">Select Backup File</string>
    <string name="recover_from_backup">v2.0.8 and later backup</string>
    <string name="recover_from_old_backup">Backup before v2.0.8</string>
    <string name="edit_password_title">Change private keys encrypt password</string>
    <string name="edit_password_old_password">Old Password</string>
    <string name="edit_password_new_password">New Password</string>
    <string name="edit_password_confirm_new_password">Confirm New Password</string>
    <string name="edit_password_editing">Changing password…\nDo Not turn off the screen.</string>
    <string name="private_key_management">Private Key Management</string>
    <string name="send_confirm_change_to_label">Change to:</string>
    <string name="sign_transaction_change_amount_label">Change Amount:</string>
    <string name="sign_message_activity_name">Sign Message</string>
    <string name="address_alias_input_label">Enter tag for this address</string>
    <string name="address_alias_input_hint">Tag</string>
    <string name="add_hd_account_view_label">You already have an HD account.</string>
    <string name="add_hd_account_seed_qr_code">HD Account Seed QR Code</string>
    <string name="add_hd_account_seed_qr_phrase">HD Account Seed Phrase</string>
    <string name="add_cold_hd_account_monitor_qr">HD Account Monitor QR Code</string>
</resources>