<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/address_alias_input_label"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_field_holo_dark_background"
        android:hint="@string/address_alias_input_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLength="20"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_bg_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_bg_selector"
            android:text="@string/OK"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>