<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:keepScreenOn="true"
             android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_password_title"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_field_holo_dark_background"
            android:hint="@string/edit_password_old_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword|number"
            android:maxLength="30"
            android:password="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_field_holo_dark_background"
            android:hint="@string/edit_password_new_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword|number"
            android:maxLength="30"
            android:password="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_field_holo_dark_background"
            android:hint="@string/edit_password_confirm_new_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword|number"
            android:maxLength="30"
            android:password="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_address_generate_address_password_not_same"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_bg_selector"
                android:text="@string/cancel"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_bg_selector"
                android:text="@string/OK"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:indeterminateDrawable="@drawable/check_progress_bar"
            android:indeterminateDuration="600"
            android:indeterminateOnly="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/edit_password_editing"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

</FrameLayout>