<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_view_on_blockchair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/address_option_view_on_blockchair"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22ffffff" />

    <TextView
        android:id="@+id/tv_private_key_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/private_key_management"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22ffffff" />

    <TextView
        android:id="@+id/tv_sign_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/sign_message_activity_name"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22ffffff" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/close"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />

</LinearLayout>