<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_hd_account_view_label"
        android:textColor="@color/text_field_text_color"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_small_send_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/add_cold_hd_account_monitor_qr"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_small_send_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/add_hd_account_seed_qr_code"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_small_send_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/add_hd_account_seed_qr_phrase"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>