<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="220dp"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/set_avatar_camera"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22ffffff" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/set_avatar_gallery"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22ffffff" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_touchable_foreground"
        android:padding="10dp"
        android:text="@string/close"
        android:textColor="@color/dialog_text_color_selector"
        android:textSize="18sp" />
</LinearLayout>